argocd/storage/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-gw
  namespace: minio
  labels:
    app: minio-gw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-gw
  template:
    metadata:
      labels:
        app: minio-gw
    spec:
      containers:
      - name: minio-gw
        image: minio/minio
        command:
          - sh
          - -c
          - minio gateway s3 http://rook-ceph-rgw-ceph-objectstore.rook-ceph.svc.cluster.local:80
        ports:
        - containerPort: 9000
