argocd/storage/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-gw-svc
  namespace: minio
spec:
  selector:
    app: minio-gw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
