argocd/storage/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-gw-ing
  namespace: minio
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-gw-svc
                port:
                  number: 80
  tls:
    - hosts:
        - minio
